[gd_scene load_steps=5 format=2]

[ext_resource path="res://DraggableWindow.tscn" type="PackedScene" id=1]
[ext_resource path="res://MessageBox.gd" type="Script" id=2]
[ext_resource path="res://Assets/icon_cancel.png" type="Texture" id=3]
[ext_resource path="res://Assets/icon_ok.png" type="Texture" id=4]

[node name="MessageBox" type="Control"]
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.0941176 )
margin_right = 432.0
margin_bottom = 166.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraggableWindow" parent="." instance=ExtResource( 1 )]
self_modulate = Color( 0.388235, 0.392157, 0.45098, 1 )
margin_left = 0.0
margin_right = 300.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 60 )
hide_close_button = true

[node name="VBoxContainer" type="VBoxContainer" parent="DraggableWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -29.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="DraggableWindow/VBoxContainer"]
margin_right = 280.0
margin_bottom = 16.0
rect_min_size = Vector2( 60, 14 )
text = "Messagedf"

[node name="HBoxContainer" type="HBoxContainer" parent="DraggableWindow/VBoxContainer"]
margin_top = 26.0
margin_right = 280.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 20 )
alignment = 1

[node name="YesButton" type="TextureButton" parent="DraggableWindow/VBoxContainer/HBoxContainer"]
margin_left = 91.0
margin_right = 121.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 4 )
expand = true

[node name="OkButton" type="TextureButton" parent="DraggableWindow/VBoxContainer/HBoxContainer"]
margin_left = 125.0
margin_right = 155.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 4 )
expand = true

[node name="NoButton" type="TextureButton" parent="DraggableWindow/VBoxContainer/HBoxContainer"]
margin_left = 159.0
margin_right = 189.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="DraggableWindow/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="DraggableWindow/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
